--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "itbconnect",
   "version": "0.0.1",
   "description": "Itb Connect with vue",
-  "productName": "ItbConnect App",
+  "productName": "ItbConnect Ikatan Alumni ITB",
   "author": "fajar ilham rosi <fajarilhamrosi@gmail.com>",
   "private": true,
   "scripts": {
