--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "build": "quasar build",
+    "start": "node server.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "quasar": "^2.0.0",
+    "serve-static": "^1.14.1",
     "vuex": "^4.0.1",
     "vuex-persistedstate": "^4.1.0"
   },
