--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 BACKEND_PATH = http://127.0.0.1:8000/
 PROFILE_IMG = profile/
 NEWS_IMG = image_news/
-PORT = 8008
+API = api/
+HEADER_IMG = header/
