--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^9.6.1",
     "quasar": "^2.0.0",
     "serve-static": "^1.14.1",
     "vuex": "^4.0.1",
